syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated";

message CommandRequest {
  string command = 1;
}

message CommandResponse {
  string result = 1;
}

message Book {
  int32 id = 1;
  string title = 2;
  int32 page_count = 3;
}

service Commander {
  rpc processCommand (CommandRequest) returns (CommandResponse) {}
}

